--- a/实验3/operation/聚合操作.md
+++ b/实验3/operation/聚合操作.md
@@ -1,13 +1,16 @@
+# 实验三：聚合操作练习
 学院：省级示范性软件学院   
 课程：高级数据库技术与应用   
-题目：《 实验三：聚合操作》   
+题目：《实验三：聚合操作练习》   
 姓名：张爽   
 学号：2200770132   
 班级：软工2202   
 日期：2024-10-14   
-实验环境：elasticsearch，kibana   
-实验目的：熟练使用Elasticsearch 聚合查询语句   
-实验内容：Elasticsearch 聚合操作练习
+实验环境：elasticsearch-8.12.2, kibana-8.12.2  
+
+## 一、实验目的：熟练使用Elasticsearch 聚合查询语句     
+
+## 二、实验内容：Elasticsearch 聚合操作练习
 
 1. 统计每个产品类别的总销售额。  
 查询代码如下：
